--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   db:
     image: mysql:8.4.2
+    command: --mysql-native-password=ON
     ports:
       - "3306:3306"
     environment:
@@ -10,3 +11,39 @@ services:
       MYSQL_PASSWORD: ${DB_PASSWORD}
     volumes:
       - ./docker/db:/var/lib/mysql
+  gateway:
+    image: nginx:1.27.1
+    volumes:
+      - ./docker/nginx.conf:/etc/nginx/conf.d/default.conf
+    ports:
+      - 80:80
+  user:
+    build:
+      context: .
+      args:
+        - SERVICE=user
+    image: node-micros/user
+    env_file:
+      - .env
+    environment:
+      - DB_HOST=db
+  material:
+    build:
+      context: .
+      args:
+        - SERVICE=material
+    image: node-micros/material
+    env_file:
+      - .env
+    environment:
+      - DB_HOST=db
+  transaction:
+    build:
+      context: .
+      args:
+        - SERVICE=transaction
+    image: node-micros/transaction
+    env_file:
+      - .env
+    environment:
+      - DB_HOST=db
